Oops our text-align was committed all buggeed

--- a/sass/application.sass
+++ b/sass/application.sass
@@ -198,9 +198,10 @@ body
   .lengthy
     width: 250px
   .interests
-    text-align: right
     a:hover
       background-color: #F3B0A2
+    .value
+      text-align: right
   .smaller
     font-size: 0.8em
 
